...
    </plurals>
    <plurals name="positivesText">
        <item quantity="one">%d positivo</item>
        <item quantity="other">%d positivos</item>
    </plurals>
    <plurals name="positivesTextWithNoValue">
        <item quantity="one">positivo</item>
        <item quantity="other">positivos</item>
    </plurals>
    <plurals name="riskContactTextWithNoValue">
        <item quantity="one">contacto de riesgo con</item>
        <item quantity="other">contactos de riesgo con</item>
    </plurals>

    <!-- Errores genéricos -->
    <string name="network_error">Ha habido un error de red en la solicitud.</string>
    <string name="request_error">Error en la solicitud</string>
...
    <!-- Preferences: Notificaciones de positivos -->
    <string name="shared_prefs_positives_notifications">PositivesNotifications</string>

    <!-- Bottom Navigation Menu -->
    <string name="bottom_menu_item_1">Rastreador</string>
    <string name="bottom_menu_item_2">Positivo</string>
    <string name="bottom_menu_item_3">Contactos</string>
    <string name="bottom_menu_item_4">Histórico</string>


    <!-- Default Blank Fragment -->
    <string name="default_blank_fragment">DEFAULT BLANK FRAGMENT</string>

...
    <string name="locationTrackerTitle">Rastreo de Ubicación</string>
    <string name="labelStartStopTracker">Servicio para rastrear la ubicación</string>

    <!-- Títulos de las Tabs de la opción de menú de rastreo -->
    <string name="tabTracker">Rastreador</string>
    <string name="tabAlarms">Alarmas</string>
    <string name="tabMap">Mapa</string>

    <!-- Fragment de Información del rastreo de ubicación -->
    <string name="labelNoLocations">No hay localizaciones que mostrar.</string>


    <!-- Fragment: Histórico de localizaciones -->
...
    <string name="locations">localizaciones</string>
    <string name="deleteLocationsText">Se han eliminado %d localizaciones.</string>

    <!-- Alarmas de localización -->
    <string name="locationAlarmsTitle">Alarmas de localización</string>
    <string name="labelActivateAlarm">Programar rastreo automático</string>
    <string name="init">Inicio</string>
    <string name="end">Fin</string>
    <string name="program">Programar</string>
    <string name="noAlarm">No tienes alarmas programadas</string>
    <string name="newAlarm">Nueva alarma programada</string>
    <string name="errorInvalidHours">Las horas especificadas no son válidas</string>
    <string name="errorAlarmCollision">Ya existen alarmas programadas para ese rango de horas</string>
    <string name="labelCurrentAlarm">Alarma pendiente</string>
...
    <string name="privacyPolicy">Política de Privacidad</string>
    <string name="agree">Sí, estoy de acuerdo</string>
    <string name="cancelAgree">No, gracias</string>

    <!-- Fragment: Resultados de la Comprobación de Contactos de Riesgo -->
    <string name="riskPercentPlaceholder">0%</string>
    <string name="txtCheckHour">Hora de la comprobación</string>
    <string name="txtRiskPercent">Riesgo más alto</string>
    <string name="contactWith">Contacto con:</string>
    <string name="positives">Positivos</string>
    <plurals name="positiveContacs">
        <item quantity="one">Contacto con %1$d positivo</item>
        <item quantity="other">Contacto con %2$d positivos</item>
    </plurals>
    <string name="emptyResultsLabel">Aún no hay resultados. Inicia una nueva comprobación para detectar contactos de riesgo.</string>

    <!-- Fragment: Detalles de un resultado de la comprobación -->
    <string name="riskiestContact">Contacto de mayor riesgo</string>
    <string name="riskPercent">Riesgo</string>
    <string name="startHour">Inicio</string>
    <string name="endHour">Fin</string>
    <string name="exposeTime">T. de exposición</string>
    <string name="meanProximity">Proximidad media</string>
    <string name="riskContacts">Contactos de riesgo</string>
    <string name="numberPositives">Número de positivos</string>
    <string name="meanValues">Valores medios</string>
    <string name="totalMeanRisk">Riesgo</string>
    <string name="totalMeanExposeTime">Tiempo de exposición</string>
    <string name="totalMeanProximity">Proximidad</string>
    <string name="generalData">Datos generales</string>
    <string name="riskContactInMap">Contacto de riesgo</string>

    <!-- Fragment: Comprobación de contactos de riesgo -->
    <string name="manualCheck">Comprobación manual</string>
    <string name="periodicCheck">Comprobación periódica</string>
    <string name="checkRiskContacts">Comprobar contactos de riesgo</string>
    <string name="scheduledAlarms">Alarmas programadas</string>
    <string name="manualCheckExplanation">Inicia una comprobación manualmente para detectar posibles contactos de riesgo con otros positivos.</string>
    <string name="periodicCheckExplanation">Programa horas concretas del día para realizar la comprobación de contactos de riesgo. Esta comprobación se repetirá todos los días a las horas indicadas.</string>
    <string name="checkHour">Hora de la comprobación</string>
    <string name="riskContactCheckingPlaceholder">Comparando tus localizaciones con las de otros positivos...</string>
    <string name="checkAlarmSetSnackbar">Alarma de comprobación programada correctamente.</string>
    <string name="checkAlarmErrorCollision">Ya existen alarmas de comprobación programadas para esa hora.</string>
    <string name="checkAlarmErrorCountLimit">No puedes programar más de %d alarmas de comprobación.</string>
    <string name="addRiskContactAlarmBtnDescription">Añadir alarma de comprobación.</string>
    <string name="tabCheck">Comprobar</string>
    <string name="tabResults">Resultados</string>

    <!-- Notificaciones: Resultados de la Comprobación de Contactos de Riesgo -->
    <string name="resultNotificationTitle">Resultados de la comprobación</string>
    <string name="resultNotificationHealthy">No has tenido contacto con ningún positivo.</string>
    <string name="resultNotificationCheckingErrorTitle">Error durante la comprobación de contactos</string>
    <string name="resultNotificationCheckingError">No ha sido posible realizar la comprobación de contactos de riesgo.</string>
...
