...
        app:cardCornerRadius="6dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/grey1"
        android:layout_marginBottom="6dp">

        <LinearLayout
            android:id="@+id/cardRiskContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <!-- Columna Izquierda -->
            <LinearLayout
...
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/startHour"
                            android:textStyle="bold"
                            android:layout_marginEnd="4dp"/>
                        <TextView
                            android:id="@+id/txtContactStartHour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text='@{rc.startDate != null &amp;&amp; rc.timeIntersection ? du.formatDate(rc.startDate, "HH:mm:ss") : "##:##:##"}'
                            android:textAppearance="?attr/textAppearanceSubtitle2"
                            android:textStyle="bold"/>
                    </LinearLayout>
...
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/endHour"
                            android:textStyle="bold"
                            android:layout_marginEnd="4dp"/>
                        <TextView
                            android:id="@+id/txtContactEndHour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text='@{rc.startDate != null &amp;&amp; rc.timeIntersection ? du.formatDate(rc.endDate, "HH:mm:ss") : "##:##:##"}'
                            android:textAppearance="?attr/textAppearanceSubtitle2"
                            android:textStyle="bold"/>
                    </LinearLayout>
...
                        android:layout_width="0dp"
                        android:layout_weight="0.82"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/exposeTimeRiskContactCardTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/exposeTime"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtContactExposeTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:textColor="@color/deepGreen"
                            android:textStyle="bold"
                            android:textSize="18sp"
...
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/proximityRiskContactCardTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/meanProximity"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/txtContactMeanProximity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{@string/m(rc.meanProximity)}"
                            android:gravity="start"
                            android:textColor="@color/deepBlue"
                            android:textStyle="bold"
...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="end">
                    <TextView
                        android:id="@+id/riskRiskContactCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/riskPercent"
                        android:textSize="12sp"
                        android:paddingTop="4dp"
                        android:textAppearance="?attr/textAppearanceOverline"
...
                        android:padding="4dp"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        app:riskLevelBackground="@{rc.riskLevel}"/>
                </LinearLayout>
                <!-- Botón para mostrar el contacto en el mapa -->
                <com.google.android.material.chip.Chip
                    android:id="@+id/btnShowContactInMap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tabMap"
                    app:chipIcon="@android:drawable/ic_dialog_map"
                    app:iconStartPadding="6dp"
                    app:chipIconTint="@color/black"
...
