...
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/generalRiskTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/totalMeanRisk"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:drawablePadding="2dp"
                        android:layout_gravity="center"
                        app:drawableLeftCompat="@drawable/ic_orange_warning" />

                    <TextView
                        android:id="@+id/generalRiskValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@{@string/percentText(result.getTotalMeanRisk())}"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textSize="22sp" />
...
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/generalExposeTimeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/totalMeanExposeTime"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:drawablePadding="2dp"
                        android:layout_gravity="center"
                        app:drawableStartCompat="@drawable/ic_time" />
                    <TextView
                        android:id="@+id/generalExposeTimeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@{String.format("%d min %d sec", meanExposeTimeMins, meanExposeTimeSecs)}'
                        android:layout_gravity="center"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textSize="20sp"/>
...
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/generalProximityTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/totalMeanProximity"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:drawablePadding="2dp"
                        android:layout_gravity="center"
                        app:drawableLeftCompat="@drawable/ic_proximity" />
                    <TextView
                        android:id="@+id/generalProximityValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{@string/m(result.getTotalMeanProximity())}"
                        android:layout_gravity="center"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textSize="22sp"/>
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/numberOfContactsDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/redDanger"
                    android:text="@{String.valueOf(result.riskContacts.size())}"/>
                <TextView
...
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="2dp"
                    android:text="@{@plurals/riskContactTextWithNoValue(result.riskContacts.size())}"
                    android:textSize="18sp"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/numberOfPositivesDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(result.numberOfPositives)}"
                    android:textColor="@color/blue1"
                    android:textSize="25sp"/>
                <TextView
...
