...
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/riskContacts"
        android:name="es.uniovi.eii.contacttracker.fragments.riskcontacts.RiskContactTabsFragment"
        android:label="Contactos de Riesgo"
        tools:layout="@layout/fragment_risk_contact">
        <action
            android:id="@+id/showResultDetails"
            app:destination="@id/resultDetailsFragment"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
...


    <!-- Fragmento de Detalles de un Resultado de la comprobación de contactos de riesgo -->
    <fragment
        android:id="@+id/resultDetailsFragment"
        android:name="es.uniovi.eii.contacttracker.fragments.riskcontacts.ResultDetailsFragment"
        android:label="Detalles del resultado"
        tools:layout="@layout/fragment_result_details" >
        <argument
            android:name="result"
            app:argType="es.uniovi.eii.contacttracker.model.RiskContactResult" />
        <action
            android:id="@+id/showRiskContactInMap"
...
